traces/bug_793.txt
examples++-load/medit.cpp:1765: error: DEAD_STORE
  The value written to &mps (type Fem2D::MeshPoint*) is never used.
Showing all 1 steps of the trace


examples++-load/medit.cpp:1765:46: Write of unused value
1763.   {
1764.     if(NoGraphicWindow) return Nothing;
1765.     MeshPoint *mp(MeshPointStack(stack)) , mps=*mp;
                                                     ^
1766.     long order (arg(0,stack,1L));
1767.     //
